@@ -6,6 +6,10 @@ Version 1.4.0:
 - Fix Importing DNS Zones and speedup importing dns zones - With thanks to Centron GmbH
 - Fixs for backup hostingspace - With thanks to Centron GmbH
 - Upgraded to letsencrypt-win-simple v1.9.7.2
+- Fixed LetsEncrypt 0.0.0.0 bindings issue.
+- LetsEncrypt Import certificate fixed
+- LetsEncrypt Success and Failure text fixed.
+- LetsEncrypt renew screen fixed on success.
 
 Version 1.3.0:
 - Changed all Int16 to Int32 due to issues with Int16 values
